# pyocr

./: Makefile  README.md  hello.py  main.py  pyproject.toml
pyocr/: pyocr.py
pyocr/inference/: base_ocr_v20.py  config.py  predict_cls.py  predict_det.py  predict_rec.py  predict_system.py  pytorchocr_utility.py
pyocr/pytorchocr/data/: __init__.py
pyocr/pytorchocr/data/imaug/: __init__.py  gen_table_mask.py  operators.py
pyocr/pytorchocr/modeling/architectures/: base_model.py
pyocr/pytorchocr/modeling/backbones/: __init__.py  det_mobilenet_v3.py  det_resnet.py  det_resnet_vd.py  det_resnet_vd_sast.py  e2e_resnet_vd_pg.py  rec_densenet.py  rec_hgnet.py  rec_lcnetv3.py  rec_lcnetv3_bak.py  rec_mobilenet_v3.py  rec_mv1_enhance.py  rec_resnet_31.py  rec_resnet_fpn.py  rec_resnet_vd.py  rec_svtrnet.py  rec_vitstr.py  table_mobilenet_v3.py  table_resnet_vd.py
pyocr/pytorchocr/modeling/heads/: __init__.py  cls_head.py  det_db_head.py  det_east_head.py  det_fce_head.py  det_pse_head.py  det_sast_head.py  e2e_pg_head.py  multiheadAttention.py  rec_att_head.py  rec_can_head.py  rec_ctc_head.py  rec_multi_head.py  rec_nrtr_head.py  rec_sar_head.py  rec_srn_head.py  self_attention.py  sr_rensnet_transformer.py  table_att_head.py
pyocr/pytorchocr/modeling/necks/: __init__.py  db_fpn.py  east_fpn.py  fce_fpn.py  fpn.py  pg_fpn.py  rnn.py  (+2 more)
pyocr/pytorchocr/postprocess/: __init__.py  db_postprocess.py  east_postprocess.py  fce_postprocess.py  locality_aware_nms.py  pg_postprocess.py  rec_postprocess.py  sast_postprocess.py
pyocr/pytorchocr/utils/: logging.py  utility.py
(+10 files in other folders)
