[project]
name = "pyocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=8.27.0",
    "numpy>=2.1.1",
    "opencv-python>=4.10.0.84",
    "pillow>=10.4.0",
    "pyclipper>=1.3.0.post5",
    "ruff>=0.6.4",
    "scikit-image>=0.24.0",
    "shapely>=2.0.6",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "transformers>=4.44.2",
]
