[project]
name = "pyocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipython",
    "numpy",
    "opencv-python",
    "pillow",
    "pyclipper",
    "pylint",
    "ruff",
    "scikit-image",
    "shapely",
    "torch",
    "torchvision",
    "transformers",
]
